# notifications

./: 1-introduction-mdx.cf3d35f9.iframe.bundle.js  2-1-backend-setup-mdx.09c001f4.iframe.bundle.js  2-1-backend-setup-mdx.3f6a4dba.iframe.bundle.js  2-1-backend-setup-mdx.40fb6eca.iframe.bundle.js  2-1-backend-setup-mdx.53356cd6.iframe.bundle.js  2-2-sending-notifications-mdx.9cfff648.iframe.bundle.js  238.7631cfd8.iframe.bundle.js  253.dea4bc23.iframe.bundle.js  3-notifier-agent-setup-mdx.d12e4e8e.iframe.bundle.js  3-notifier-agent-setup-mdx.f3dddc7a.iframe.bundle.js  368.be8c269b.iframe.bundle.js  368.be8c269b.iframe.bundle.js.map  379.db7ae0a4.iframe.bundle.js  433.aca88018.iframe.bundle.js  535.32b8b15d.iframe.bundle.js  535.32b8b15d.iframe.bundle.js.map  729.db22a6ad.iframe.bundle.js  744.fcf78534.iframe.bundle.js  760.7c66d829.iframe.bundle.js  781.540b2a37.iframe.bundle.js  781.540b2a37.iframe.bundle.js.map  Cargo.toml  README.md  iframe.html  index.json  main.70251740.iframe.bundle.js  main.9c8a6760.iframe.bundle.js  package-lock.json  package.json  project.json  runtime~main.0529875a.iframe.bundle.js  runtime~main.d6fbeb4d.iframe.bundle.js  runtime~main.d8f98d68.iframe.bundle.js  runtime~main.f24d787f.iframe.bundle.js  stories.json
stories/: 1-introduction.mdx  2.1-backend-setup.mdx  (+3 more)
stories-unused/: 2.2-integrity.mdx  2.3-coordinator.mdx  3.1-frontend-setup.mdx  3.2-notifications-store.mdx
zomes/coordinator/notifications/: Cargo.toml
zomes/coordinator/notifications/src/: contact.rs  lib.rs  notificant_to_notifiers.rs  sent_notification.rs  twilio_credentials.rs
zomes/coordinator/notifications/tests/common/: mod.rs
(+26 files in other folders)
