[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["zomes/coordinator/*", "zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
holochain = "=0.2.2"
serde = { version = "=1.0.163", default-features = false }
hdi = { version = "=0.3.2", default-features = false }
hdk = { version = "=0.2.2", default-features = false }
