[package]
name = "hc_zome_notifications_coordinator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_notifications_coordinator"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

notifications_integrity = { path = "../../integrity/notifications", package = "hc_zome_notifications_integrity" }

[dev-dependencies]
fixt = "0.1.0"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { worskpace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }

