[package]
name = "hc_zome_notifications"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_notifications"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-2.4" }
notifications_integrity = { path = "../../integrity/notifications", package = "hc_zome_notifications_integrity" }
